--- a/backend/config/settings.yml
+++ b/backend/config/settings.yml
@@ -18,3 +18,17 @@ default:
     NAME: qme_back
 
   LOGGING:
+    version: 1
+    disable_existing_loggers: False
+    formatters:
+      default:
+        format: "%(levelname)-8s#  [%(asctime)s.%(msecs)d]  %(filename)s [LINE:%(lineno)d]:  %(message)s"
+    handlers:
+      console:
+        level: INFO
+        class: logging.StreamHandler
+        formatter: default
+        stream: ext://sys.stdout
+    root:
+      level: INFO
+      handlers: [ console ]
