--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qme-backend"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
@@ -10,6 +10,8 @@ python = "^3.12"
 fastapi = {extras = ["all"], version = "^0.115.4"}
 uvicorn = "^0.32.0"
 dynaconf = "^3.2.6"
+sqlalchemy = "^2.0.37"
+asyncpg = "^0.30.0"
 
 
 [build-system]
