made config with end & refactoring setup with new config

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,33 @@
+# FastAPI настройки
+PROJECT_NAME=qme_backend
+VERSION=1.0.0
+DEBUG=True
+HOST=0.0.0.0
+PORT=8080
+RELOAD=True
+
+# Logging настройки
+LOGGING_LEVEL=DEBUG
+LOGGING_FORMAT='%(levelname)-8s#  [%(asctime)s.%(msecs)d]  %(filename)s [LINE:%(lineno)d]:  %(message)s'
+
+# Postgres настройки
+PG_DB_USER=postgres
+PG_DB_PASS=postgres
+PG_DB_NAME=db_name
+PG_DB_HOST=localhost
+PG_DB_PORT=5432
+
+# Настройки Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=password
+
 # SMTP настройки
 SMTP_SERVER=smtp.yandex.ru
 SMTP_PORT=465
-SMTP_USERNAME=
-SMTP_PASSWORD=
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
 
 # Настройки OTP
 OTP_EXPIRATION=300
@@ -10,9 +35,3 @@ MAX_ATTEMPTS=5
 MAX_SENDS=5
 COOLDOWN_TIME=60
 BLOCK_TIME=600
-
-# Настройки Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD=  
