--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ redis = "^5.2.1"
 sqlalchemy = "^2.0.37"
 asyncpg = "^0.30.0"
 alembic = "^1.14.0"
+python-json-logger = "^3.2.1"
+dishka = "^1.4.2"
 
 
 [build-system]
