--- a/backend/config/settings.yml
+++ b/backend/config/settings.yml
@@ -2,12 +2,14 @@ default:
   DEBUG: true
   NAME: backend
   HOST: 0.0.0.0
-  PORT: 8080
+  PORT: 8000
   WORKERS: 4
   FAST_API_PATH: backend.app:app
   RELOADED: false
   LOG_LEVEL: info
 
+  CORS:
+    origins: [ "*" ]
 
   DATABASE:
     DRIVER: postgresql+asyncpg
