--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v3
 
       # Если требуется собрать или протестировать проект, добавьте соответствующие шаги здесь.
+      - name: Debug variables
+        run: |
+          echo "Host: ${{ env.INPUT_HOST }}"
+          echo "Username: ${{ env.INPUT_USERNAME }}"
+          echo "Password: ${{ env.INPUT_PASSWORD }}"
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.7
