--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             cd /root/pr/QME-backend
-            git pull origin devel
+            git pull origin deploy
             make down 
             make delete
             make build
