--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ asyncpg = "^0.30.0"
 alembic = "^1.14.0"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
+pytest = "^8.3.5"
+pulp = "^3.1.1"
+ortools = "^9.12.4544"
 
 
 [build-system]
