--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ openpyxl = "^3.1.5"
 pytest = "^8.3.5"
 pulp = "^3.1.1"
 ortools = "^9.12.4544"
+pgvector = "^0.4.1"
+greenlet = "^3.2.2"
 
 
 [build-system]
