--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pulp = "^3.1.1"
 ortools = "^9.12.4544"
 pgvector = "^0.4.1"
 greenlet = "^3.2.2"
+sentence-transformers = "^4.1.0"
 
 
 [build-system]
