added recommendations demo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ ortools = "^9.12.4544"
 pgvector = "^0.4.1"
 greenlet = "^3.2.2"
 sentence-transformers = "^4.1.0"
+numpy = "^2.2.6"
 
 
 [build-system]
