--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ onnx = "^1.18.0"
 onnxruntime = "^1.22.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.11.13"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
